[package]
name = "chap15"
version = "0.1.0"
authors = ["alexdelorenzo <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
overflow-checks = true
opt-level = 3
lto = true
incremental = true

# [profile.dev]
# overflow-checks = true
# opt-level = 3

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
